--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -7,6 +7,13 @@ jobs:
   deploy:
     name: Deploy to EC2
     runs-on: ubuntu-latest
+
+    # ✅ AWS credentials available to ALL steps
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ap-south-1
+
     steps:
       - uses: actions/checkout@v4
 
@@ -24,10 +31,6 @@ jobs:
           cd infra
           echo "ec2_ip=$(terraform output -raw ec2_ip)" >> $GITHUB_OUTPUT
           echo "db_endpoint=$(terraform output -raw db_endpoint)" >> $GITHUB_OUTPUT
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ap-south-1
 
       - name: Decode SSH key
         run: |
@@ -43,11 +46,13 @@ jobs:
 
       - name: Copy image to EC2
         run: |
-          scp -i ~/.ssh/ec2_key.pem -o StrictHostKeyChecking=no app.tar ubuntu@${{ steps.tf_outputs.outputs.ec2_ip }}:/home/ubuntu
+          scp -i ~/.ssh/ec2_key.pem -o StrictHostKeyChecking=no \
+          app.tar ubuntu@${{ steps.tf_outputs.outputs.ec2_ip }}:/home/ubuntu
 
       - name: Run container
         run: |
-          ssh -i ~/.ssh/ec2_key.pem -o StrictHostKeyChecking=no ubuntu@${{ steps.tf_outputs.outputs.ec2_ip }} << 'EOF'
+          ssh -i ~/.ssh/ec2_key.pem -o StrictHostKeyChecking=no \
+          ubuntu@${{ steps.tf_outputs.outputs.ec2_ip }} << 'EOF'
             docker load < app.tar
             docker stop demo || true
             docker rm demo || true
