--- a/.github/workflows/infra-bootstrap.yml
+++ b/.github/workflows/infra-bootstrap.yml
@@ -16,11 +16,18 @@ jobs:
   bootstrap:
     name: Create State Resources
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: ap-south-1
+
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_wrapper: false
 
       - name: Terraform Init
         run: |
@@ -33,7 +40,3 @@ jobs:
           terraform apply -auto-approve \
             -var="state_bucket_name=${{ github.event.inputs.bucket_suffix }}-terraform-state" \
             -var="dynamodb_table_name=${{ github.event.inputs.table_suffix }}-terraform-locks"
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ap-south-1
