--- a/.github/workflows/infra-up.yml
+++ b/.github/workflows/infra-up.yml
@@ -18,6 +18,8 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_wrapper: false
 
       - name: Terraform Init
         run: |
